<?xml version="1.0"?>
<package format="2">
  <name>gazebo_ground_truth_tf_broadcaster</name>
  <version>0.0.0</version>
  <description>The gazebo_ground_truth_tf_broadcaster package</description>
  <maintainer email="beike315@icloud.com">Tatsuhiro Ikebe</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
</package>
